LPPA-CALCULATOR ADD COMMENTS, AND FIX CSS BORDER BUTTON

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
         <title>LPPA-CALCULATOR</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-
     </head>
     <body>
+        <!--Comienzo del Wrapper-->
         <div class="wrapper">
+            <!--Comienzo de mi calculadora-->
             <div class="calculator">
+                <!--Comienzo de mi display-->
                 <div class="output">
-                    <div class="previous-operant">
-                        <span id="resultado"></span>
-                    </div>
+                    <span id="resultado"></span>
                 </div>
+                <!--Fin de mi display-->
+                <!--Comienzo de mi botonera-->
                 <div class="buttons">
-
                     <button id="num-7" class="black">7</button>
                     <button id="num-8" class="black">8</button>
                     <button id="num-9" class="black">9</button>
@@ -36,9 +37,11 @@
                     <button id="igual" class="difum">=</button>
                     <button id="division" class="difum">%</button>
                 </div>
-
+                <!--Fin de mi botonera-->
             </div>
+            <!--Fin de mi calculadora-->
         </div>
+        <!--Fin del Wrapper-->
         <script src="app.js"></script>
     </body>
 </html>
