LPPA-CALCULATOR ADD JS AND CSS FOLDERS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LPPA-CALCULATOR</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     </head>
     <body>
@@ -42,6 +42,6 @@
             <!--Fin de mi calculadora-->
         </div>
         <!--Fin del Wrapper-->
-        <script src="app.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 </html>
